# cpp_mem_queue

./: .gitignore  CMakeLists.txt  README.md
lib/: lib.hpp
src/: client.cpp  main.cpp  my_struct.hpp
